--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Metamask Sign to Login</h1>
     <div id="target"></div><br/>
+    The below example contract is on the <a href="https://ropsten.etherscan.io/address/0x4c66135f8A7bBd6C3f9ae8642c93f66359cEE483">Ropsten test network</a> <br/>
     <label for="txtContractAddress">Contract Address: </label><input type="text" id="txtContractAddress" name="txtContractAddress" size="43" maxlength="42" value="0x4c66135f8A7bBd6C3f9ae8642c93f66359cEE483"></input><br/>
     <label for="txtChainbotNFTTokenId">Chainbot NFT Token Id: </label><input type="number" id="txtChainbotNFTTokenId" name="txtChainbotNFTTokenId" size="11" maxlength="10" value="0"></input><br/><br/>
     <button id="sign">Sign in with Metamask</button><br/>
